# Example_authentification

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.home.yml  pyproject.toml
src/: main.py  tasks.py
src/api/: router.py
src/api/depends/: auth.py  databse.py  localization.py  verification.py
src/api/endpoints/: auth.py  localization.py  triggered_error.py  verificarion.py
src/commons/: base.py  email_client.py  ip_info.py  state.py
src/commons/oauth/: facebook.py  google.py  otp.py  tg.py  tggatway.py  vk.py  yandex.py
src/config/: configs.py
src/constants/: errors.py
src/databases/: pg.py  redis_db.py
src/migrations/: env.py
src/migrations/versions/: 2026_06_21_1954-045c519803ef_.py
src/models/: __init__.py  sessions.py  token_blacklist.py  user.py
src/repositories/: base.py  blacklist.py  cart.py  user.py  user_policy.py  user_session.py  verification.py
src/schemas/: __init__.py  auth.py
src/security/: password.py  password_generator.py  security.py  verification.py
src/services/: auth.py  loaclization.py  state.py  verification.py
src/templates/: base.html  verification.html
src/utils/: errors.py
tests/: __init__.py  conftest.py  infrastructure.py
tests/test_api/test_auth/: test_login.py  test_logout.py  test_register.py
tests/test_api/test_verification/: test_resend_verification_code.py  test_verify.py
