[project]
name = "auth_expample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"
dependencies = [
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.10.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "fastapi-jwt>=0.3.0",
    "fastapi-mail>=1.6.2",
    "geoip2>=5.2.0",
    "httpx[socks]>=0.28.1",
    "ipinfo>=5.5.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.6.1",
    "python-multipart>=0.0.22",
    "testcontainers>=4.14.2",
    "redis>=7.4.0",
    "ruff>=0.15.7",
    "sentry-sdk>=2.58.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
    "user-agents>=2.2.0",
    "uvicorn>=0.42.0",
    "jwt>=1.4.0",
    "pyjwt>=2.12.1",
]


[tool.ruff]
line-length = 79
target-version = "py313"
extend-include = ["src"]
exclude = ["tests/fixtures/query.py"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM"
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.ty.src]
include = ["src"]

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.ty.environment]
python-version = "3.13"

